src/objects/SharedServicesRequest__c.object
<CustomObject>
    <fields>
        <fullName>DBRating__c</fullName>
        <label>D&amp;B Rating</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No information available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBReportDate__c</fullName>
        <label>D&amp;B Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DecisionPointAsia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DesktopCheckAsia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desktop Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERPSystem__c</fullName>
        <inlineHelpText>Specify source financial/project system. If multiple, select Oracle</inlineHelpText>
        <label>ERP System</label>
        <picklist>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCPAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EcoEconomicallyDisadvantagedWomanOwned__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Economically Disadvantaged Woman-Owned Small Business (EDWOSB)</inlineHelpText>
        <label>Economically Disadvantaged Woman-Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancialInstitutionAccountNumber__c</fullName>
        <label>Financial Institution Account Number</label>
        <length>17</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>FiscalIDTaxRegNoorVATNoSpain__c</fullName>
        <inlineHelpText>Tax ID number applicable for Spain only</inlineHelpText>
        <label>Fiscal ID -Tax Reg No</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>GeneralRequestNotes__c</fullName>
        <inlineHelpText>Please enter a brief description of your general request.</inlineHelpText>
        <label>General Request Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GenerateObjects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GenerateObjects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <inlineHelpText>Specify the Geography this request pertains to.</inlineHelpText>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IDCopyforIndividualAsia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Copy for Individual (Asia)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntercompanyCustomer__c</fullName>
        <inlineHelpText>Select &quot;Yes&quot; if this customer is an AECOM Entity. Otherwise select &quot;NO&quot;</inlineHelpText>
        <label>Intercompany Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InvoicePaymentCurrency__c</fullName>
        <label>Invoice/Payment Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DJF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EGP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MKDenialStatus__c</fullName>
        <label>MK Denial Status</label>
        <picklist>
            <picklistValues>
                <fullName>Checked - okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked - concern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked - account is barred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check is not required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account is on Trusted Partner List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NameofFinancialInstitution__c</fullName>
        <label>Name of Financial Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameonAccount__c</fullName>
        <label>Name on Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OUName__c</fullName>
        <description>Select the name of the Operating Unit for the customer/vendor to be created in</description>
        <inlineHelpText>Select the name of the Operating Unit for the customer/vendor to be created in</inlineHelpText>
        <label>Operating Unit</label>
        <picklist>
            <controllingField>ERPSystem__c</controllingField>
            <picklistValues>
                <fullName>ACM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS NZ 80419</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM AFR ACM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM AUST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM CANADA LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM CONSULTING SVC NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM EUR ESP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM EUR IRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM EUR ITA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM EUR POL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM EUR ROU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM LBY ACM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM ME AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM ME BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM ME KSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM ME OM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM ME QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM ME SAU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM NEW ZEALAND LIMITED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM SAU UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM TECH CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM ZAF ACM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASIA_SGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHN_ACM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHN_CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHN_ENV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHN_KPK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHN_PDD</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OfficeEmail__c</fullName>
        <label>Office E-mail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeFax__c</fullName>
        <label>Office Fax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficePhone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OrganizationType__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Excise Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Service Tax Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India TCS Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India TDS Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India VAT authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sole Trader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subconsultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SubContractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Sheet Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Sheet Contractor (PAYE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Override_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentAccountNumber__c</fullName>
        <formula>ParentAccount__r.OracleCustomerNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select Salesforce parent account</inlineHelpText>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Global Business Services (Parent Account)</relationshipLabel>
        <relationshipName>SharedServicesRequestsParentAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayAloneFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pay Alone Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PayGroup__c</fullName>
        <label>Pay Group</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AACL Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAGHL Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAGL Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAGML Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTG Employee Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTG Inter-Company Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTG Supplier Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East AACL Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACTG Subcontractor Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEX ACH Pay group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East Contractor Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East Employee Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East Inter-Company Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East Recurring Payment Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East Subcontractor Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada East Supplier Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFPL Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMMCL Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMSL Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL Rent Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL Subconsultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL Subcontractors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENPAC LTD Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENSR Asia (HK) Ltd Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Company Pay Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KSA Witholding Tax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clearing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <inlineHelpText>Select the agreed payment terms</inlineHelpText>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>38 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20th Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay on Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay When Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay When Paid Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 10 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 15 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 5 YEARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 20 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 55 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extended Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 FOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NET 85 DAYS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5/14 NET 30 DAYS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryContactEmail__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PrimaryContactFirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContactLastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryContactPhone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PriorityNumber__c</fullName>
        <label>Priority Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProfileClass__c</fullName>
        <inlineHelpText>Customer credit status (&quot;default&quot; if unknown)</inlineHelpText>
        <label>Profile Class</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reach__c</fullName>
        <inlineHelpText>Describes extent of the entity&apos;s operation - Choose one</inlineHelpText>
        <label>Reach</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-national</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that was created from this GBS request.</description>
        <inlineHelpText>The account that was created from this GBS request.</inlineHelpText>
        <label>Reference Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Global Business Services (Reference Account)</relationshipLabel>
        <relationshipName>GlobalBusinessServicesReferenceAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceBillingSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Billing Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Global Business Services (Reference Billing Site)</relationshipLabel>
        <relationshipName>Global_Business_Services1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceRemitSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Remit Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Global Business Services (Reference Remit Site)</relationshipLabel>
        <relationshipName>Global_Business_Services2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceSite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Global Business Services (Reference Site)</relationshipLabel>
        <relationshipName>Global_Business_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>CORPORATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MID-ATLANTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIDWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RemitIsPrimaryAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RemitToAddressLine1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemitToAddressLine2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemitToCity__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemitToCountry__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RemitToOfficeEmail__c</fullName>
        <label>Remittance Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RemitToOfficeFax__c</fullName>
        <label>Office Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RemitToOfficePhone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RemitToStateProvinceEmirateName__c</fullName>
        <formula>RemitToStateProvinceEmirate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remit To State/Province/Emirate</label>
        <type>Text</type>
    </fields>
</CustomObject>